--- a/kdebase-workspace/trunk/PKGBUILD
+++ b/kdebase-workspace/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdebase-workspace
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 pkgdesc="KDE Base Workspace"
 arch=('i686' 'x86_64')
@@ -13,11 +13,10 @@ groups=('kde')
 # note on libxdamage:
 # 	not detected by namcap because libgl depends on it
 #	but nvidia providing libgl does not depend on libxdamage
-depends=('polkit-kde' 'kdepimlibs' 'kdepim-runtime' 'kdebase-runtime' 'qimageblitz'
-         'libxcomposite' 'lm_sensors' 'libxklavier' 'libxdamage'
-         'xorg-utils' 'libxrandr' 'libraw1394' 'libqalculate')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'networkmanager' 'bluez'
-        'kdebindings-python' 'docbook-xsl' 'boost' 'python2')
+depends=('kdepim-runtime' 'lm_sensors' 'libraw1394' 'qimageblitz' 'libqalculate'
+        'polkit-kde' 'consolekit' 'xorg-xprop' 'libxdamage' 'libxklavier' 'libdmtx')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'networkmanager' 'bluez'
+        'docbook-xsl' 'python2' 'kdebindings-python')
 replaces=('kdmtheme' 'kde-common' 'guidance-power-manager' 'policykit-kde' 'kdebase-kinfocenter')
 conflicts=('kde-common' 'guidance-power-manager' 'policykit-kde' 'kdebase-kinfocenter')
 install="${pkgname}.install"
@@ -27,18 +26,26 @@ backup=('usr/share/config/kdm/kdmrc'
         'etc/pam.d/kscreensaver')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
         'kdm-zsh-profile.patch' 'kdm' 'kde.pam' 'kde-np.pam' 'kscreensaver.pam'
-        'fixpath.patch' 'terminate-server.patch')
-sha1sums=('38457b606bfc0b39842fb451566ddf49d145da82'
+        'fixpath.patch' 'terminate-server.patch'
+        'set-horos-theme.patch'
+        'fix-MALLOC_CHECK.patch')
+sha1sums=('c192f712d16617e625acc84fcd9e0546df887a70'
           '8c2bdefb23a03b753b78d16944d03fa3939d2d99'
           '5db3a245201bd4a50e65aa2ef583cf5490e4f646'
           'f7b38af38549242a240f1a90ab9964ca8a366129'
           '603cc79c4d2b4eae62bb5f244aeecb3a778b5516'
           '106635aa1aae51d6f0668b1853f6c49a4fe9d3d8'
           'd7b5883f7e65c6839b1f65f94d58026673dd0226'
-          'ac7bc292c865bc1ab8c02e6341aa7aeaf1a3eeee')
+          'ac7bc292c865bc1ab8c02e6341aa7aeaf1a3eeee'
+          'd1f74ba2c7e2580d32b16ab88b0e6e804951e663'
+          'd8d6ac7f1b25a30fdd0d6a182e2ac6c6f2a28cd7')
 
 build() {
 	cd ${srcdir}/${pkgname}-${pkgver}
+    # Already fixed upstream
+    patch -Np0 -i ${srcdir}/set-horos-theme.patch
+    patch -Np0 -i ${srcdir}/fix-MALLOC_CHECK.patch
+
 	patch -p0 -i ${srcdir}/kdm-zsh-profile.patch
 	patch -p0 -i ${srcdir}/fixpath.patch
 	patch -p0 -i ${srcdir}/terminate-server.patch
@@ -52,7 +59,6 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DWITH_Xmms=OFF \
 		-DWITH_Googlegadgets=OFF \
-		-DWITH_QEdje=OFF \
 		-DWITH_PolkitQt=OFF
 	make
 }
