--- a/kdeedu/trunk/PKGBUILD
+++ b/kdeedu/trunk/PKGBUILD
@@ -25,7 +25,7 @@ pkgname=('kdeedu-blinken'
          'kdeedu-parley'
          'kdeedu-rocs'
          'kdeedu-step')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -35,7 +35,7 @@ makedepends=('pkgconfig' 'cmake' 'automoc4' 'ocaml' 'facile' 'eigen' 'cfitsio'
 	'kdebase-runtime' 'openbabel' 'libqalculate' 'gsl' 'boost' 'libindi' 'r'
 	'libspectre' 'python2' 'docbook-xsl' 'gpsd' 'avogadro')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('c43db1c4689b18b7eda12810f05d9d3ca12055c2')
+sha1sums=('790acbf29ad76d25c1156ce31c28b4fbd8baaa7e')
 
 build() {
 	cd $srcdir
@@ -226,6 +226,7 @@ package_kdeedu-libkdeedu() {
 	pkgdesc='Support library for KDE Educational Software'
 	groups=()
 	depends=('kdelibs')
+	install='kdeedu.install'
 	cd $srcdir/build/libkdeedu
 	make DESTDIR=$pkgdir install
 	install -D -m644 $srcdir/${pkgbase}-${pkgver}/cmake/modules/FindKDEEdu.cmake \
