--- a/thunar-media-tags-plugin/trunk/PKGBUILD
+++ b/thunar-media-tags-plugin/trunk/PKGBUILD
@@ -1,24 +1,47 @@
 # $Id$
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
 # Contributor: Andrew Simmons <andrew.simmons@gmail.com>
 
 pkgname=thunar-media-tags-plugin
-pkgver=0.1.2
-pkgrel=6
-pkgdesc="Lets you view/edit id3/ogg tags in thunar"
-arch=(i686 x86_64)
+pkgver=0.1.2.99.git20110129
+pkgrel=1
+pkgdesc="adds special features for media files to the Thunar File Manager"
+arch=('i686' 'x86_64')
 license=('GPL2')
-url="http://xfce-goodies.berlios.de/"
+url="http://goodies.xfce.org/projects/thunar-plugins/thunar-media-tags-plugin"
 groups=('xfce4-goodies')
 depends=('taglib' 'thunar')
-makedepends=('intltool' 'pkgconfig')
+makedepends=('intltool' 'xfce4-dev-tools')
 options=('!libtool')
-source=(http://goodies.xfce.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('8a95f0ea4df6f757c1c94eb5442d2ff5')
+source=(#http://archive.xfce.org/src/thunar-plugins/${pkgname}/0.1/${pkgname}-${pkgver}.tar.bz2
+	# broken master http://git.xfce.org/thunar-plugins/thunar-media-tags-plugin/snapshot/thunar-media-tags-plugin-8d29c1f4672f41baabc84ec02630c79793ead159.tar.bz2
+	# thunarx-2 branch 
+	#http://git.xfce.org/thunar-plugins/thunar-media-tags-plugin/snapshot/thunar-media-tags-plugin-270924abcab81275dede68d882936c14b238b3ec.tar.bz2
+	ftp://ftp.archlinux.org/other/$pkgname/thunar-media-tags-plugin-270924abcab81275dede68d882936c14b238b3ec.tar.bz2
+	0001-Switch-to-the-new-tooltip-api-in-gtk-depend-on-gtk-2.patch
+	04_fix-implicit-dso-linking.patch)
+md5sums=('faf79a2568ae7b76477ddd0d9ffe9380'
+         '199e0f657333ed1d09947b7d4fdeb493'
+         'b310ccc46752f672a1030c4e17093b77')
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/xfce4 \
-    --localstatedir=/var --disable-static
-  make || return 1
+#  cd ${srcdir}/${pkgname}-${pkgver}
+  cd ${srcdir}/${pkgname}*
+  # fixes for new thunar taken from http://bugzilla.xfce.org/show_bug.cgi?id=6295
+  patch -Np1 -i ${srcdir}/0001-Switch-to-the-new-tooltip-api-in-gtk-depend-on-gtk-2.patch
+  patch -Np1 -i ${srcdir}/04_fix-implicit-dso-linking.patch
+  xdt-autogen
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib/xfce4 \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
+}
+
+package() {
+#  cd ${srcdir}/${pkgname}-${pkgver}
+  cd ${srcdir}/${pkgname}*
   make DESTDIR=${pkgdir} install
 }
