--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -11,20 +11,21 @@ license=('GPL2')
 url="http://goodies.xfce.org/projects/panel-plugins/xfce4-smartbookmark-plugin"
 groups=('xfce4-goodies')
 depends=('xfce4-panel' 'libxfcegui4')
-makedepends=('intltool' 'libxt')
+makedepends=('intltool' 'libxt' 'xfce4-dev-tools')
 options=('!libtool')
 source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.4/${pkgname}-${pkgver}.tar.gz
-	xfce4-smartbookmark-plugin-0.4.2-desktop-file.patch
-	xfce4-smartbookmark-plugin-archlinux.patch)
+	xfce4-smartbookmark-plugin-archlinux.patch
+	0001-Fix-problems-with-plugin-and-4.8-panel.patch)
 md5sums=('284e26595637dd2e900b75534372496b'
-         'ca6ecc8ff90cc13ef81d6412978dfac7'
-         '323ac898cfcfdb078f67f9ecd1905aec')
+         '323ac898cfcfdb078f67f9ecd1905aec'
+         '6dc220fc41cd21678aad62c80a4c622f')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  # fix path, taken from Fedora
-  patch -Np0 -i ${srcdir}/xfce4-smartbookmark-plugin-0.4.2-desktop-file.patch || return 1
-  patch -Np0 -i ${srcdir}/xfce4-smartbookmark-plugin-archlinux.patch || return 1
+  # fix panel4.8  http://bugzilla.xfce.org/show_bug.cgi
+  patch -Np1 -i ${srcdir}/0001-Fix-problems-with-plugin-and-4.8-panel.patch
+  patch -Np0 -i ${srcdir}/xfce4-smartbookmark-plugin-archlinux.patch
+  xdt-autogen
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--libexecdir=/usr/lib \
