--- a/xfce4-dict/trunk/PKGBUILD
+++ b/xfce4-dict/trunk/PKGBUILD
@@ -10,8 +10,8 @@ arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://goodies.xfce.org/projects/applications/xfce4-dict"
 groups=('xfce4-goodies')
-depends=('xfce4-panel' 'hicolor-icon-theme' 'librsvg')
-makedepends=('pkgconfig')
+depends=('xfce4-panel' 'libxfcegui4' 'hicolor-icon-theme' 'librsvg')
+makedepends=('intltool')
 options=('!libtool')
 install=${pkgname}.install
 source=(http://archive.xfce.org/src/apps/xfce4-dict/0.6/xfce4-dict-${pkgver}.tar.bz2)
@@ -21,7 +21,7 @@ conflicts=('xfce4-dict-plugin')
 replaces=('xfce4-dict-plugin')
 
 build() {
-  cd ${startdir}/src/xfce4-dict-${pkgver}
+  cd ${srcdir}/xfce4-dict-${pkgver}
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--libexecdir=/usr/lib \
@@ -32,6 +32,6 @@ build() {
 }
 
 package() {
-  cd ${startdir}/src/xfce4-dict-${pkgver}
-  make DESTDIR=${startdir}/pkg install || return 1
+  cd ${srcdir}/xfce4-dict-${pkgver}
+  make DESTDIR=${pkgdir} install
 }
