--- a/xfce4-mailwatch-plugin/trunk/PKGBUILD
+++ b/xfce4-mailwatch-plugin/trunk/PKGBUILD
@@ -1,5 +1,5 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Suzy Williams <suzanne.williams3@verizon.net>
 
 pkgname=xfce4-mailwatch-plugin
@@ -11,14 +11,19 @@ license=('GPL2')
 url="http://spurint.org/projects/xfce4-mailwatch-plugin/"
 groups=('xfce4-goodies')
 depends=('xfce4-panel' 'libxfcegui4' 'gnutls>=2.4.1' 'hicolor-icon-theme')
-makedepends=('intltool')
+makedepends=('intltool' 'xfce4-dev-tools')
 options=('!libtool')
 install=${pkgname}.install
-source=(http://spuriousinterrupt.org/files/mailwatch/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('f84dce86be1d7f25f169f262aaacee4e')
+source=(http://spuriousinterrupt.org/files/mailwatch/${pkgname}-${pkgver}.tar.bz2
+	xfce4-mailwatch-plugin-1.1.0-underlink.patch)
+md5sums=('f84dce86be1d7f25f169f262aaacee4e'
+         '47fe8588e3bb642e1b507a854927e6db')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
+  # fix for panel4.8 from Fedora
+  patch -Np1 -i ${srcdir}/xfce4-mailwatch-plugin-1.1.0-underlink.patch
+  xdt-autogen
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--libexecdir=/usr/lib \
