--- a/kernel26/trunk/PKGBUILD
+++ b/kernel26/trunk/PKGBUILD
@@ -7,10 +7,10 @@ pkgname=('kernel26' 'kernel26-headers' 'kernel26-docs') # Build stock -ARCH kern
 _kernelname=${pkgname#kernel26}
 _basekernel=2.6.37
 pkgver=${_basekernel}
-pkgrel=4
+pkgrel=5
 makedepends=('xmlto' 'docbook-xsl')
-_patchname="patch-${pkgver}-${pkgrel}-ARCH"
-#_patchname="patch-${pkgver}-2-ARCH"
+#_patchname="patch-${pkgver}-${pkgrel}-ARCH"
+_patchname="patch-${pkgver}-4-ARCH"
 arch=(i686 x86_64)
 license=('GPL2')
 url="http://www.kernel.org"
@@ -65,7 +65,7 @@ package_kernel26() {
   pkgdesc="The Linux Kernel and modules"
   groups=('base')
   backup=(etc/mkinitcpio.d/${pkgname}.preset)
-  depends=('coreutils' 'linux-firmware' 'module-init-tools' 'mkinitcpio>=0.6.8')
+  depends=('coreutils' 'linux-firmware' 'module-init-tools>=3.12-2' 'mkinitcpio>=0.6.8')
   # pwc, ieee80211 and hostap-driver26 modules are included in kernel26 now
   # nforce package support was abandoned by nvidia, kernel modules should cover everything now.
   # kernel24 support is dropped since glibc24
