--- a/nmap/trunk/PKGBUILD
+++ b/nmap/trunk/PKGBUILD
@@ -1,29 +1,35 @@
 # $Id$
-# Maintainer: Hugo Doria <hugo@archlinux.org>
+# Maintainer: Angel Velasquez <angvp@archlinux.org>
+# Contributor: Hugo Doria <hugo@archlinux.org>
 
 pkgname=nmap
-pkgver=5.21
-pkgrel=3
+pkgver=5.50
+pkgrel=1
 pkgdesc="A network exploration tool and security/port scanner"
 arch=('i686' 'x86_64')
 url="http://nmap.org"
-license=('custom:GPL')
-depends=('pcre' 'openssl' 'libpcap>=1.0.0' 'lua')
+license=('GPL')
+depends=('pcre' 'openssl' 'libpcap' 'lua')
 # python is needed for zenmap
 makedepends=('python2')
 optdepends=('pygtk: gui for nmap')
 options=('!makeflags')
 source=(http://nmap.org/dist/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('a4df96e52cb52a1bbe76caace5f21388')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
 
-  echo "TryExec=/usr/bin/pygtk-demo" >> zenmap/install_scripts/unix/zenmap.desktop || return 1
-  echo "TryExec=/usr/bin/pygtk-demo" >> zenmap/install_scripts/unix/zenmap-root.desktop || return 1
+  echo "TryExec=/usr/bin/pygtk-demo" >> zenmap/install_scripts/unix/zenmap.desktop 
+  echo "TryExec=/usr/bin/pygtk-demo" >> zenmap/install_scripts/unix/zenmap-root.desktop 
 
   ./configure --prefix=/usr --mandir=/usr/share/man \
     --libexecdir=/usr/lib
-  make || return 1
+  make
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR="${pkgdir}" install
 
   # remove zenmap uninstall script
@@ -32,4 +38,3 @@ build() {
   # install custom GPL2 license
   install -D -m644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
 }
-md5sums=('f77fa51d89ab27d35e5cd87bb086b858')
