--- a/xz/trunk/PKGBUILD
+++ b/xz/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: François Charette <firmicus@gmx.net>
 
 pkgname=xz
-pkgver=5.0.0
+pkgver=5.0.1
 pkgrel=1
 pkgdesc='Library and command line tools for XZ and LZMA compressed files'
 arch=('i686' 'x86_64')
@@ -14,8 +14,8 @@ provides=('lzma' 'lzma-utils' 'xz-utils')
 replaces=('lzma' 'lzma-utils' 'xz-utils')
 conflicts=('lzma' 'lzma-utils' 'xz-utils')
 options=('!libtool')
-source=("http://tukaani.org/${pkgname}/${pkgname}-${pkgver}.tar.gz")
-md5sums=('f3c0706d100ad2b6d63327584d026c50')
+source=("http://tukaani.org/${pkgname}/${pkgname}-${pkgver}.tar.xz")
+md5sums=('85d15b01a405616a888d09e19fb40f31')
 
 # keep an upgrade path for older installations
 PKGEXT='.pkg.tar.gz'
