--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase=poppler
 pkgname=('poppler' 'poppler-glib' 'poppler-qt')
 pkgver=0.16.2
-pkgrel=1
+pkgrel=2
 arch=(i686 x86_64)
 license=('GPL')
 makedepends=('libjpeg' 'gcc-libs' 'cairo' 'libxml2' 'fontconfig' 'openjpeg' 'gtk2' 'qt' 'pkgconfig' 'lcms')
@@ -37,6 +37,7 @@ package_poppler() {
   rm -f "${pkgdir}"/usr/lib/libpoppler-{glib,qt4}.so*
   rm -f "${pkgdir}"/usr/lib/pkgconfig/poppler-{glib,qt4}.pc
   rm -rf "${pkgdir}/usr/share/gtk-doc"
+  rm -f "${pkgdir}"/usr/bin/poppler-glib-demo
 }
 
 package_poppler-glib() {
