--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,12 +5,12 @@
 
 pkgname=gsettings-desktop-schemas
 pkgver=3.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Shared GSettings schemas for the desktop"
 arch=('any')
 url="http://live.gnome.org/"
 license=('GPL')
-depends=('gnome-themes-standard')
+depends=('glib2')
 makedepends=('intltool')
 install=$pkgname.install
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/3.0/${pkgname}-${pkgver}.tar.bz2)
