--- a/pyatspi/trunk/PKGBUILD
+++ b/pyatspi/trunk/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Ionut Biru <ibiru@archlinux.org>
 pkgname=pyatspi
 pkgver=2.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Python bindings for at-spi"
 arch=(any)
 url="http://www.linuxfoundation.org/en/AT-SPI_on_D-Bus"
 license=('GPL2')
-depends=(pygobject)
+depends=('pygobject' 'at-spi2-core')
 source=(http://download.gnome.org/sources/${pkgname}/2.0/${pkgname}-${pkgver}.tar.bz2)
 sha256sums=('e5b362a1f83e008c464ba0cb9e0bae372debc953b1b1bda32cf124a66d87ddbf')
 
