--- a/seamonkey/trunk/PKGBUILD
+++ b/seamonkey/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # $Id$
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=seamonkey
-pkgver=2.0.13
+pkgver=2.0.14
 pkgrel=1
 pkgdesc="SeaMonkey internet suite"
 arch=('i686' 'x86_64')
@@ -15,24 +15,27 @@ source=(http://releases.mozilla.org/pub/mozilla.org/${pkgname}/releases/${pkgver
         seamonkey.desktop
         seamonkey-appversion.patch
         seamonkey-2.0-lang.patch
-        python27.patch)
-md5sums=('8915dbdd48aa26b791b622a7e8778b64'
+        python27.patch
+        gcc46.patch)
+md5sums=('2099ec0b71f950faad297a140b2702bc'
          '4978159e4921892e34dcd7e9804f0437'
          '448848e65efcbf1b2be2873b66b6cd48'
          'a4275fc48361c80f676e96fdb28bd74e'
          '25b6fe16ac24cd5c852213e5c1adb272'
-         '47e57931d65c71baafcf0e4f9160e876')
+         '47e57931d65c71baafcf0e4f9160e876'
+         '6fa81e4bb54120254efa29b6d2ccc7fb')
 
 build() {
   cd "${srcdir}/comm-1.9.1"
   patch -Np1 -i "${srcdir}/seamonkey-appversion.patch"
   patch -Np1 -i "${srcdir}/seamonkey-2.0-lang.patch"
+  patch -Np1 -i "${srcdir}/gcc46.patch"
   patch -Np0 -i "${srcdir}/python27.patch"
 
   cp "${srcdir}/mozconfig" .mozconfig
   unset CFLAGS
   unset CXXFLAGS
-
+  export CXXFLAGS="-fpermissive"
   export LDFLAGS="-Wl,-rpath,/usr/lib/seamonkey-2.0"
 
   make -j1 -f client.mk build MOZ_MAKE_FLAGS="${MAKEFLAGS}"
