--- a/libgtkhtml/trunk/PKGBUILD
+++ b/libgtkhtml/trunk/PKGBUILD
@@ -1,13 +1,14 @@
 # $Id$
 # Maintainer: Jan de Groot <jgc@archlinux.org>
+
 pkgname=libgtkhtml
 pkgver=2.11.1
-pkgrel=2
+pkgrel=3
 pkgdesc="An HTML library for GTK"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('gtk2>=2.14.4' 'libxml2>=2.6.32')
-makedepends=('perlxml' 'pkgconfig')
+depends=('gtk2>=2.22.1' 'libxml2>=2.7.8')
+makedepends=('perlxml')
 options=('!libtool')
 url="http://www.gnome.org"
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.11/${pkgname}-${pkgver}.tar.bz2)
@@ -16,7 +17,11 @@ md5sums=('a1d1a197dcff8c4571659deef5495e24')
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
-              --localstatedir=/var --disable-static || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
+              --localstatedir=/var --disable-static
+  make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 }
